adicionando a requisao POST no servidor